examples/test/testpolicy945.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy945
  namespace: namespace98
spec:
  podSelector:
    matchLabels:
      key17: value45
      key12: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value6
          key35: value14
          key9: value39
      podSelector:
        matchLabels:
          key38: value44
          key33: value27
